--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 name: Getcwm # 这是你的插件的唯一识别名。
-desc: 一个刺猬猫小说数据获取与画图插件。 # 插件简短描述
+desc: 一个刺猬猫小说数据获取与画图插件包括每章间贴数,更新时间点,章更新字数,日更新字数,间贴排行榜前10,间贴排行榜后10。 # 插件简短描述
 help: 使用/Getcwm help查看帮助。 # 插件的帮助信息
 version: v1.0.0 # 插件版本号。格式：v1.1.1 或者 v1.1
 author: lishining # 作者
